--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,13 @@ jobs:
         uses: actions/checkout@v2
       - name: Deployment
         uses: appleboy/ssh-action@master
-        
+
         with:
-          host: ${{ secrets.HOST }} // ip address
+          host: ${{ secrets.HOST }}
 
-          username: ${{ secrets.USERNAME }} // server user
+          username: ${{ secrets.USERNAME }}
 
-          password: ${{ secrets.PASSWORD }} // server paroli
+          password: ${{ secrets.PASSWORD }}
 
           script: |
             cd /srv/fast-export-excel 
